**refactor: 精简代码逻辑，移除多余检查并统一参数约束**
- 优化参数校验逻辑，改为统一的最小/最大值约束方法
- 删除多处冗余变量赋值和条件检查
- 简化正则表达式，移除重复模式
- 使用 switch 替代链式条件，提升代码可读性
- 减少 DTO 和实体类中 Optional 使用，移除重复的封装
- 更新多处循环逻辑，减少冗余代码